deployment_strategies_with_istio/enable_canary_deployment/vs_with_weight.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: name-route
spec:
  hosts:
  - name
  exportTo:
  - "."
  gateways:
  - mesh
  http:
  - match:
    - headers:
        x-test:
          exact: use-v3
    route:
    - destination:
        host: name
        subset: name-v3
  - route: # weight is distributed by route so the destination for v2 must be under the same route block.
    - destination:
        host: name
        subset: name-v1
      weight: 90    # 90% of all traffic
    - destination:
        host: name
        subset: name-v2
      weight: 10   # 10% of all traffic
